# src/controllers/eventController.ts
@@ -1,5 +1,5 @@
 import { Events } from '@prisma/client';
-import { Body, Controller, Get, Post, Route, Tags } from 'tsoa';
+import { Body, Controller, Get, Post, Put, Route, Tags } from 'tsoa';
 import { inject, injectable } from 'tsyringe';
 import IEventService from '../interfaces/services/IEventService';
 import { EVENT_SERVICE } from '../ioc/types';
@@ -26,6 +26,14 @@ export class EventController extends Controller {
     @Body() body: ICreateEvent,
   ): Promise<Events> {
     return this._service.createEvent(body);
+  }
+
+  @Put('{eventId}')
+  updateEvent(
+    eventId: number,
+    @Body() body: Partial<ICreateEvent>,
+  ): Promise<Events> {
+    return this._service.updateEvent(eventId, body);
   }
 }
 
