# swagger.json
@@ -53,6 +53,25 @@
 			},
 			"ICreateEvent": {
 				"$ref": "#/components/schemas/CreateModel_Events_"
+			},
+			"Partial_ICreateEvent_": {
+				"properties": {
+					"title": {
+						"type": "string"
+					},
+					"description": {
+						"type": "string"
+					},
+					"date": {
+						"type": "string",
+						"format": "date-time"
+					},
+					"location": {
+						"type": "string"
+					}
+				},
+				"type": "object",
+				"description": "Make all properties in T optional"
 			}
 		},
 		"securitySchemes": {}
@@ -116,6 +135,48 @@
 						"application/json": {
 							"schema": {
 								"$ref": "#/components/schemas/ICreateEvent"
+							}
+						}
+					}
+				}
+			}
+		},
+		"/events/{eventId}": {
+			"put": {
+				"operationId": "UpdateEvent",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {
+									"$ref": "#/components/schemas/Events"
+								}
+							}
+						}
+					}
+				},
+				"tags": [
+					"Events"
+				],
+				"security": [],
+				"parameters": [
+					{
+						"in": "path",
+						"name": "eventId",
+						"required": true,
+						"schema": {
+							"format": "double",
+							"type": "number"
+						}
+					}
+				],
+				"requestBody": {
+					"required": true,
+					"content": {
+						"application/json": {
+							"schema": {
+								"$ref": "#/components/schemas/Partial_ICreateEvent_"
 							}
 						}
 					}
